--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content = "IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MIO Dairy Produts</title>
+    
+    <link rel="icon" type="image/jpg" href="images/MIO.jpg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,7 +15,7 @@
 <body>
     <section id="header">
         <a href="#">
-            <img src="MIO.jpg" class="logo" alt="">
+            <img src="images\MIO.jpg" class="logo" alt="">
             <div>
                 <ul id="navbar">
                     <li><a class="active" href="index.html">Home</a></li>
@@ -33,7 +35,7 @@
         <button>Shop Now</button>
     </section>
 
-
+    
     <script src="script.js"> </script>
 </body>
 </html>
