--- a/index.html
+++ b/index.html
@@ -35,7 +35,34 @@
         <button>Shop Now</button>
     </section>
 
-    
+    <section id="feature" class="section-p1">
+        <div class="fe-box">
+            <img src="images/f1.png" alt="">
+            <h6>Home Delivery</h6>    
+        </div>
+        <div class="fe-box">
+            <img src="images/f2.png" alt="">
+            <h6>Online Order</h6>    
+        </div>
+        <div class="fe-box">
+            <img src="images/f3.png" alt="">
+            <h6>Subscription Plans</h6>
+        </div>
+        <div class="fe-box">
+            <img src="images\f4.png" alt="">
+            <h6>Payment</h6>
+        </div>
+        <div class="fe-box">
+            <img src="images/f5.png" alt="">
+            <h6>Online Tracking</h6>
+        </div>
+        <div class="fe-box">
+            <img src="images/f6.png" alt="">
+            <h6>Product Variety</h6>
+        </div>
+    </section>
+
+
     <script src="script.js"> </script>
 </body>
 </html>
