--- a/index.html
+++ b/index.html
@@ -62,6 +62,62 @@
         </div>
     </section>
 
+    <footer class="section-p1">
+        <div class="col">
+            <img class="logo" src="images/MIO.jpg" width="200" height="auto" alt="Logo">
+            <div class="follow">
+                <h4>Follow Us</h4>
+                <div class="icon">
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-youtube"></i>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <h4>Contact Us</h4>
+            <p><strong>Address: </strong> Industrial Estate, Pokhara-10</p>
+            <p><strong>Phone: </strong> +977 9898989898</p>
+            <p><strong>Email: </strong> mio@dairyproducts.com</p>
+            <p><strong>Hours: </strong> 6:00 - 6:00 </p>
+        </div>
+
+        <div class="col">
+            <h4>About</h4>
+            <a href="#">About Us</a>
+            <a href="#">Delivery Information</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Terms and Conditions</a>
+            <a href="#">Contact Us</a>
+        </div>
+
+        <div class="col">
+            <h4>My Account</h4>
+            <a href="#">Sign In</a>
+            <a href="#">View Cart</a>
+            <a href="#">My Wishlist</a>
+            <a href="#">Track My Order</a>
+            <a href="#">Help</a>
+        </div>
+
+        
+
+        <div class="install">
+           <h4>Payment Methods</h4>
+           <img src="images/esewa.jpg" width="50" height="auto" alt="">
+           <img src="images/visa.png" width="50" height="auto" alt="">
+           <img src="images/Mastercard.png" width="50" height="auto" alt="">
+           <img src="images/ime.png" width="50" height="auto" alt="">
+        </div>
+
+        <div class="copyright">
+            <p>© 2025 - All Rights with MIO Dairy Products</p>
+        </div>
+
+    </footer>
+
 
     <script src="script.js"> </script>
 </body>
