--- a/sproduct.html
+++ b/sproduct.html
@@ -29,26 +29,30 @@
         </a>
     </section>
 
+    <section id="prodetails" class="section-p1">
+        <div class="single-pro-image">
+            <img src="images/milk.jpg" width="100%" id="MainImg" alt="">
+        </div>
+        <div class="single-pro-details">
+            <h6>Home</h6>
+            <h4>Milk</h4>
+            <h2>Rs. 100.00</h2>
+            <input type="number" value="1">
+            <button class="normal">Add To Cart</button>
+            <h4>Product Details</h4>
+            <span>Experience the richness of farm-fresh milk, packed with essential nutrients to keep you healthy and energized. Our milk is sourced from carefully nurtured cows, ensuring the highest quality and taste in every sip. Whether for drinking, cooking, or making your favorite dairy delights, this milk is the perfect addition to your daily routine. <br>
+                ✔ 100% Natural & Pure – No additives or preservatives <br>
+                ✔ Rich in Calcium & Protein – Strengthens bones and boosts energy <br>
+                ✔ Creamy & Delicious – Perfect for tea, coffee, and smoothies <br>
+                ✔ Responsibly Sourced – From local farms with ethical practices
+            </span>
+        </div>
+    </section>
+
     <section id="product1" class="section-p1">
         <h2>Featured Products</h2>
         <p>Fresh Dairy Products, straight from farm.</p>
         <div class="pro-container">
-            <div class="pro" onclick="window.location.href='sproduct.html'">
-                <img src="images/milk.jpg" alt="">
-                <div class="des">
-                    <span>MIO</span>
-                    <h5>Pasteurized Milk</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>Rs. 100</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping extracart" style="color: #f81212;"></i></a>
-            </div>
             <div class="pro">
                 <img src="images/butter-ghee.jpg" alt="">
                 <div class="des">
@@ -97,76 +101,26 @@
                 </div>
                 <a href="#"><i class="fa-solid fa-cart-shopping extracart" style="color: #f81212;"></i></a>
             </div>
-            <div class="pro">
-                <img src="images\icecream.jpg" alt="">
-                <div class="des">
-                    <span>MIO</span>
-                    <h5>Ice Cream</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>Rs. 100</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping extracart" style="color: #f81212;"></i></a>
-            </div>
-            <div class="pro">
-                <img src="images/cheese.jpg" alt="">
-                <div class="des">
-                    <span>MIO</span>
-                    <h5>Cheese</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>Rs. 300</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping extracart" style="color: #f81212;"></i></a>
-            </div>
-            <div class="pro">
-                <img src="images/powdermilk.jpg" alt="">
-                <div class="des">
-                    <span>MIO</span>
-                    <h5>Powder Milk</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>Rs. 100</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping extracart" style="color: #f81212;"></i></a>
-            </div>
-            <div class="pro">
-                <img src="images/Condensed.jpg" alt="">
-                <div class="des">
-                    <span>MIO</span>
-                    <h5>Condensed Milk</h5>
-                    <div class="star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                    </div>
-                    <h4>Rs. 450</h4>
-                </div>
-                <a href="#"><i class="fa-solid fa-cart-shopping extracart" style="color: #f81212;"></i></a>
-            </div>
+        </div>
 
-
+        <div class="pro">
+            <img src="images\icecream.jpg" alt="">
+            <div class="des">
+                <span>MIO</span>
+                <h5>Ice Cream</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>Rs. 100</h4>
+            </div>
+            <a href="#"><i class="fa-solid fa-cart-shopping extracart" style="color: #f81212;"></i></a>
         </div>
 
     </section>
-
     
 
     <footer class="section-p1">
