--- a/Contact.html
+++ b/Contact.html
@@ -18,50 +18,66 @@
             <img src="images\MIO.jpg" class="logo" alt="">
             <div>
                 <ul id="navbar">
-                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a  href="index.html">Home</a></li>
                     <li><a href="shop.html">Shop</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a class="active" href="contact.html">Contact</a></li>
                     <li><a href="cart.html"><i class="fa-solid fa-bag-shopping"></i></a></li>
                 </ul>
             </div>
         </a>
     </section>
 
-    <section id="hero">
-        <h1>Experience the Purest Dairy,<br> Every Sip & Bite</h1>
-        <p>From farm to table, our dairy products are crafted with care, ensuring rich taste and wholesome nutrition.</p>
-        <button onclick="window.location.href='shop.html';">Shop Now</button>
+    <section id="contact-details" class="section-p1">
+        <div class="details">
+            <span>GET IN TOUCH</span>
+            <h2>Visit one of our locations or contact us today</h2>
+            <h3>Head Office</h3>
+
+            <div>
+                <li>
+                    <i class="fa-solid fa-map"></i>
+                    <p>Industrial Estate, Pokhara-10</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-envelope"></i>
+                    <p>mio@dairyprouct.com</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-phone"></i>
+                    <p>+977 9898989898</p>
+                </li>
+                <li>
+                    <i class="fa-solid fa-clock"></i>
+                    <p>Sunday to Friday: 6:00 AM to 6:00 PM</p>
+                </li>
+            </div>
+        </div>
+
+        <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14064.75887231133!2d83.99923571847373!3d28.201548016047134!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3995954e15b41ec7%3A0x80fa72da6debdd7e!2sIndustrial%20estate!5e0!3m2!1sen!2snp!4v1744443627334!5m2!1sen!2snp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+
+        </div>
+
     </section>
 
-    <section id="feature" class="section-p1">
-        <div class="fe-box">
-            <img src="images/f1.png" alt="">
-            <h6>Home Delivery</h6>    
-        </div>
-        <div class="fe-box">
-            <img src="images/f2.png" alt="">
-            <h6>Online Order</h6>    
-        </div>
-        <div class="fe-box">
-            <img src="images/f3.png" alt="">
-            <h6>Subscription Plans</h6>
-        </div>
-        <div class="fe-box">
-            <img src="images\f4.png" alt="">
-            <h6>Payment</h6>
-        </div>
-        <div class="fe-box">
-            <img src="images/f5.png" alt="">
-            <h6>Online Tracking</h6>
-        </div>
-        <div class="fe-box">
-            <img src="images/f6.png" alt="">
-            <h6>Product Variety</h6>
-        </div>
+    <section id="form-details">
+        <form action="">
+            <span>LEAVE A MESSAGE</span>
+            <h2>We love to hear from you</h2>
+            <input type="text" placeholder="Your Name">
+            <input type="text" placeholder="E-mail">
+            <input type="text" placeholder="Subject">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <button class="normal">Submit</button>
+        </form>
+
+
     </section>
 
+ 
     <footer class="section-p1">
         <div class="col">
             <img class="logo" src="images/MIO.jpg" width="200" height="auto" alt="Logo">
@@ -121,4 +137,4 @@
 
     <script src="script.js"> </script>
 </body>
-</html>
+</html> 
